Transfer Weight tool UI is inconsistent and crashes blender. #45991

Closed
opened 2015-09-02 10:54:38 +02:00 by Alexander Gavrilov · 6 comments

System Information

Fedora 21 64-bit

Blender Version

Broken: 2.75a

Short description of error

Source vertex group selection in Transfer Weights (aka Transfer Mesh Data) tool is inconsistent and crashes blender.

Exact steps for others to reproduce the error

  1. Load the attached file with two cubes and a few vertex groups: testweight.blend
  2. Click on Transfer Weight tool in the weight tools panel.
  3. Note that the Source Layer selection dropdown of the redo panel lists "clickme" and "group2", even though they are actually groups in the target object.
  4. Click on "clickme" in the dropdown, and blender crashes.

I suspect this weirdness may be caused by the change in the direction of transfer - old documentation says the operator transfers from the active object, whereas currently it is reversed. I'm also not sure how using "Active Layer" as source is supposed to work now. I didn't test if any similar issues also exist with other data types that can be handled by the operator.

**System Information** Fedora 21 64-bit **Blender Version** Broken: 2.75a **Short description of error** Source vertex group selection in Transfer Weights (aka Transfer Mesh Data) tool is inconsistent and crashes blender. **Exact steps for others to reproduce the error** 1. Load the attached file with two cubes and a few vertex groups: [testweight.blend](https://archive.blender.org/developer/F229873/testweight.blend) 2. Click on Transfer Weight tool in the weight tools panel. 3. Note that the Source Layer selection dropdown of the redo panel lists "clickme" and "group2", even though they are actually groups in the target object. 4. Click on "clickme" in the dropdown, and blender crashes. I suspect this weirdness may be caused by the change in the direction of transfer - old documentation says the operator transfers *from* the active object, whereas currently it is reversed. I'm also not sure how using "Active Layer" as source is supposed to work now. I didn't test if any similar issues also exist with other data types that can be handled by the operator.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-09-02 13:01:21 +02:00

Yes, in fact, to keep previous behavior of 'transfer weights' while still using new generic data transfer operator, I tweaked the later to have an (hidden) 'reverse' switch, such that it keeps transferring to active object when called as 'transfer weights'. Forgot to inverse the source layers options though, fix incoming.

Yes, in fact, to keep previous behavior of 'transfer weights' while still using new generic data transfer operator, I tweaked the later to have an (hidden) 'reverse' switch, such that it keeps transferring **to** active object when called as 'transfer weights'. Forgot to inverse the source layers options though, fix incoming.

This issue was referenced by 525d7e02d4

This issue was referenced by 525d7e02d48da1f8d415e84898039e647e6bc458

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45991
No description provided.